# discord-message-source

./: .gitignore  Cargo.toml  README.md
.cargo/: config.toml
.github/: before-build-linux.sh
.github/workflows/: beta.yml  build.yml  pre-release.yml  release.yml
i18n/zh-CN/: msgist_dc.ftl
src/: bot.rs  commands.rs  config.rs  data.rs  event.rs  framework.rs  log.rs  main.rs  message.rs  net.rs  update.rs
src/ext/: db.rs  res.rs
src/handlers/: mod.rs  receive.rs  send.rs
src/message/: handler.rs  mod.rs
src/message/handlers/: mod.rs  receive.rs  send.rs
