[package]
name = "msgist-dc"
version = "1.3.5"

authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]
#bot
serenity = { version = "0.11.5", features = ["gateway"] }

# logging
tracing= "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
colored = "2.0.0"

# asynchronous
tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
smol = "1.2.5"
sled = "0.34.7"

# tools
url = "2.2.2"
once_cell = "1.13.0"
dashmap = { version = "5.3.4", features = ["serde"] }
educe = { version = "0.4.19", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.4", features = ["serde"] }
either = "1.7.0"
infer = "0.9.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
time = { version = "0.3.12", features = ["macros", "local-offset"] }
chrono = "0.4.20"

# error handling
thiserror = "1.0.32"
color-eyre = "0.6.2"

# encoding and decoding
base64-url = "1.4.13"

# serialization
serde = { version = "1.0.142", features = ["derive","rc"] }
serde_json = "1.0.83"
serde_yaml = "0.9.4"
serde_cbor = "0.11.2"

# mesagisto
nats = { package = "async-nats", version = "0.17.0" }
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
# mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
#automatic-config = { path = "/code/automatic-config-rs" }
singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
