[package]
name = "msgist-dc"
version = "1.3.5"

authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]
beta = []

[dependencies]
#bot
serenity = { version = "0.11.5", features = ["gateway"] }

# logging
tracing= "0.1.36"
tracing-subscriber = { version = "0.3.15", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
colored = "2.0.0"
sys-locale = "0.2.1"
rust-i18n = { branch = "main", git = "https://github.com/Itsusinn/rust-i18n.git"}

# asynchronous
futures = "0.3.21"
tokio-util = "0.7.3"
tokio = { version = "1.20.1", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
reqwest = { version = "0.11.11", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
sled = "0.34.7"

# tools
uuid = "1.1.2"
url = "2.2.2"
once_cell = "1.13.0"
dashmap = { version = "5.3.4", features = ["serde"] }
educe = { version = "0.4.19", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.4", features = ["serde"] }
either = "1.7.0"
infer = "0.9.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
time = { version = "0.3.14", features = ["macros", "local-offset"] }
chrono = "0.4.22"

# error handling
thiserror = "1.0.34"
color-eyre = "0.6.2"

# encoding and decoding
base64-url = "1.4.13"

# serialization
serde = { version = "1.0.144", features = ["derive","rc"] }
serde_json = "1.0.85"
serde_yaml = "0.9.11"
ciborium = "0.2.0"

# mesagisto
# mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
#automatic-config = { path = "/code/automatic-config-rs" }
singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }

self_update = { branch = "dirty-feat", git = "https://github.com/Itsusinn/self_update.git", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }

[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
