[package]
name = "msgist-dc"
version = "1.4.0"

authors = ["Itsusinn <itsusinn@foxmail.com>"]
edition = "2021"

[package.metadata.i18n]
available-locales = ["en-US", "zh-CN"]
default-locale = "en-US"
load-path = "locales"

[features]
default = ["color"]
no-color = ["colored/no-color"]
color = ["tracing-subscriber/ansi"]

[dependencies]
serenity = { branch = "ws-proxy", git = "https://github.com/Itsusinn/serenity.git"}

# serenity = { path = "/home/itsusinn/Workspace/Clone/serenity" }

# logging
tracing= "0.1.37"
tracing-subscriber = { version = "0.3.16", default-features = false, features = [ "tracing-log", "std", "local-time", "fmt"] }
colored = "2.0.0"

# asynchronous
futures-util = "0.3.25"
tokio = { version = "1.23.0", default-features = false, features = ["macros", "rt-multi-thread","signal"] }
reqwest = { version = "0.11.13", default-features = false, features = ["rustls","rustls-tls-native-roots"] }
sled = "0.34.7"

# tools
uuid = "1.2.2"
url = "2.3.1"
once_cell = "1.17.0"
dashmap = { version = "5.4.0", features = ["serde"] }
educe = { version = "0.4.20", default-features = false, features = ["Default"] }
arcstr = { version = "1.1.5", features = ["serde"] }
either = "1.8.0"
infer = "0.11.0"
yaml-rust = "0.4.5"
linked-hash-map = "0.5.6"
time = { version = "0.3.17", features = ["macros", "local-offset"] }
chrono = "0.4.23"

# error handling
thiserror = "1.0.38"
color-eyre = "0.6.2"

# encoding and decoding
base64-url = "1.4.13"

# serialization
serde = { version = "1.0.152", features = ["derive","rc"] }
serde_json = "1.0.91"
serde_yaml = "0.9.16"
ciborium = "0.2.0"

# mesagisto
mesagisto-client = { branch = "master", git = "https://github.com/MeowCat-Studio/mesagisto-client-rs.git"}
#mesagisto-client = { path = "../../mesagisto-client/rust" }
automatic-config = { branch = "master", git = "https://github.com/Itsusinn/automatic-config-rs.git" }
#automatic-config = { path = "/code/automatic-config-rs" }
singleton = { branch = "master",git = "https://github.com/Itsusinn/singleton-rs.git" }
# singleton = { path = "/code/singleton-rs" }
lateinit = { branch = "master", git = "https://github.com/Itsusinn/lateinit-rs.git" }
self_update = { branch = "proxy", git = "https://github.com/Itsusinn/self_update.git", default-features = false, features = ["archive-zip","compression-zip-deflate","rustls"] }

# i18n
i18n-embed = { version = "0.13.4", features = ["fluent-system", "desktop-requester"]}
i18n-embed-fl = "0.6.4"
rust-embed = "6.4.2"
locale_config = "0.3.0"


[profile.release]
opt-level = 'z'
debug = 1
lto = true
incremental = false
codegen-units = 1
strip = "debuginfo"
